# jaxsp

./: LICENSE  README.md  setup.cfg  setup.py  tutorial.ipynb
data/: leoii.txt
data/Mass_profiles/: output_M_Carina.txt  output_M_Draco.txt  output_M_Fornax.txt  output_M_LeoI.txt  output_M_LeoII.txt  output_M_Sculptor.txt  output_M_Sextans.txt  output_M_UMi.txt  output_Mstar_Carina.txt  output_Mstar_Draco.txt  output_Mstar_Fornax.txt  output_Mstar_LeoI.txt  output_Mstar_LeoII.txt  output_Mstar_Sculptor.txt  output_Mstar_Sextans.txt  output_Mstar_UMi.txt  rotcurve_CVnIdwA_mass.txt  rotcurve_DDO126_mass.txt  rotcurve_DDO154_mass.txt  rotcurve_DDO168_mass.txt  rotcurve_DDO210_mass.txt  rotcurve_DDO52_mass.txt  rotcurve_DDO87_mass.txt  rotcurve_NGC2366_mass.txt  rotcurve_NGC6822_mass.txt  rotcurve_UGC8508_mass.txt  rotcurve_WLM_mass.txt
data/Mass_profiles/coreNFW_masses/: output_M_Carina.txt  (+18 more)
data/coreNFWtides_parameters/: output_M200c200_chain_Carina.txt  output_M200c200_chain_Draco.txt  output_M200c200_chain_Fornax.txt  output_M200c200_chain_LeoI.txt  output_M200c200_chain_LeoII.txt  output_M200c200_chain_Sculptor.txt  output_M200c200_chain_Sextans.txt  output_M200c200_chain_UMi.txt
examples/: eigenstate_lib.ipynb  leoii.yaml  pipeline.ipynb  tutorial.ipynb
jaxsp/: __init__.py  chebyshev.py  constants.py  eigenstates.py  eigenstates_matrix.py  eigenstates_pruess.py  interpolate.py  io_utils.py  potential.py  profiles.py  radial_schroedinger.py  schrodinger.py  special.py  units.py  utils.py  wavefunction.py
jaxsp/tests/: test.py
run/: pipeline_for_single_draw.py
