[metadata]
name = jaxsp
version = 0.1
author = Tim Zimmermann
author_email = timzi@uio.no
description = A jax-based, semi-analytical model for ULDM in spherical systems
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    jax
    jaxlib
    s2fft==1.0.2
    jaxopt
    scipy
    mgzip
    chex

[options.package_data]
* = README.md
